Deleted cq_netgraph and cq_netgraph_problem_show_auto. Instead, use cl_hud_telemetry_serverrecvmargin_graph_show
Release Notes for 2/15/2024
https://store.steampowered.com/news/app/730/view/6856237235656946988

--- a/cfg/arminc/hud.cfg
+++ b/cfg/arminc/hud.cfg
@@ -496,13 +496,9 @@ ui_steam_overlay_notification_position_vert "0"
 // Default: ""
 // cl_clanid ""
 
-// Display command queue statistics.
+// Automatically toggles performance telemetry when network conditions degrade (e.g., FPS, ping, network connection)
 // Default: 0
-cq_netgraph "0"
-
-// Automatically toggles 'cq_netgraph' when network conditions degrade.
-// Default: 0
-cq_netgraph_problem_show_auto "0"
+cl_hud_telemetry_serverrecvmargin_graph_show "0"
 
 // The percentage of the screen height that is considered safe from overscan.
 // Default: 1
